@@ -1,21 +1,16 @@
 java-common oracle-java8-jdk
-libreoffice-sdbc-hsqldb
-sonic-pi
 python idle python3-pygame python-pygame python-tk
 python3 idle3 python3-tk
 python3-pgzero
 python-serial python3-serial
 python-picamera python3-picamera
-debian-reference-en dillo x2x
+debian-reference-en dillo
 raspberrypi-net-mods raspberrypi-ui-mods
-smartsim
 python-pip python3-pip
 python3-numpy
 pypy
-minecraft-pi python-minecraftpi
 alacarte rc-gui sense-hat
 tree
-scratch nuscratch
 libgl1-mesa-dri libgles1-mesa libgles2-mesa xcompmgr
 geany
 piclone
@@ -25,10 +20,7 @@ python-twython python3-twython
 python-smbus python3-smbus
 python-flask python3-flask
 python-picraft python3-picraft
-python-sense-emu python3-sense-emu sense-emu-tools python-sense-emu-doc
 pprompt
-scratch2
-python3-thonny
 piwiz
 rp-prefapps
 libav-tools
