@@ -1,4 +1,3 @@
-libreoffice-pi
 timidity
 pi-package
 realvnc-vnc-server
