@@ -1,2 +1,2 @@
 NOOBS_NAME="Raspbian"
-NOOBS_DESCRIPTION="A port of Debian Stretch for the Raspberry Pi (full desktop version)"
+NOOBS_DESCRIPTION="A port of Debian with the Raspberry Pi Desktop"
