@@ -1,0 +1,2 @@
+NOOBS_NAME="Raspbian Full"
+NOOBS_DESCRIPTION="A port of Debian with desktop and recommended applications"
